# PetBionicAnalyser

./: .gitignore  README.md  csv_analyzer.py  csv_cleaner.py  make_desktop_app.sh  pyproject.toml  requirements.txt  run.sh  run_analysis.sh
scripts/: make_desktop_app.sh  make_feature_figures.py
src/petbionic_analyser/: __init__.py  analyzer.py  app.py  config.py  gait.py  imu.py  persistence.py  viz3d.py  widgets.py
src/petbionic_analyser/tabs/: __init__.py  calibration.py  gait_features.py  imu_tab.py  load_cell.py  orientation3d.py
